--- a/.travis.yml
+++ b/.travis.yml
@@ -20,22 +20,32 @@ sudo: false
 services:
   - docker
 
-script: mvn verify -B -P docker
-
 jdk:
   - oraclejdk8
   - openjdk11
   - oraclejdk11
   - openjdk-ea
 
-matrix:
-  allow_failures:
-    - jdk: openjdk-ea
+addons:
+  apt:
+    packages:
+      - maven
+
+install: skip
+script: mvn verify -B -P docker
 
 jobs:
   include:
-    - jdk: openjdk7
+    - name: amd64-jdk7
+      arch: amd64
+      jdk: openjdk7
       script: mvn verify -B
+    - name: arm64
+      arch: arm64
+      script: mvn verify -B
+  allow_failures:
+    - jdk: openjdk-ea
+          
 
 after_success:
   - mvn clean cobertura:cobertura coveralls:report
