--- a/httpcore5/pom.xml
+++ b/httpcore5/pom.xml
@@ -35,7 +35,7 @@
   <inceptionYear>2005</inceptionYear>
   <description>Apache HttpComponents HTTP/1.1 core components</description>
   <url>https://hc.apache.org/httpcomponents-core-5.0.x/</url>
-  <packaging>jar</packaging>
+  <packaging>bundle</packaging>
 
   <properties>
     <Automatic-Module-Name>org.apache.httpcomponents.core5.httpcore5</Automatic-Module-Name>
@@ -90,6 +90,16 @@
             </goals>
           </execution>
         </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.felix</groupId>
+        <artifactId>maven-bundle-plugin</artifactId>
+        <extensions>true</extensions>
+        <configuration>
+          <instructions>
+            <Export-Package>org.apache.hc.core5.*</Export-Package>
+          </instructions>
+        </configuration>
       </plugin>
     </plugins>
   </build>
